--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
+    "cookie-parser": "^1.4.3",
     "express": "~4.15.2",
-    "express-handlebars": "^3.0.0",
     "express-sessions": "^1.0.6",
-    "node-jest": "^0.2.0",
+    "hbs": "^4.0.1",
+    "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "sequelize": "^4.8.4",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "jest": "^21.1.0",
+    "supertest": "^3.0.0"
   }
 }
