--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.1",
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "express": "~4.15.2",
+    "express": "^4.16.1",
     "express-sessions": "^1.0.6",
     "hbs": "^4.0.1",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "sequelize": "^4.8.4",
-    "serve-favicon": "~2.4.2"
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.13.2",
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
-    "jest": "^21.1.0",
+    "jest": "^21.2.1",
     "supertest": "^3.0.0"
   }
 }
