--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "pg-promise": "^3.2.3"
+  },
+  "engines": {
+    "node": "8.4.0",
+    "npm": "5.4.2"
   }
 }
