--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
+    "dateformat": "^3.0.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
